# renoir

./: .gitignore  Cargo.toml  README.md  config.toml  config.yml.example  log.txt
.github/workflows/: docs.yml  rust.yml  website.yml
benches/: batch_mode.rs  caching.rs  coarse_time.rs  collatz.rs  common.rs  connected.rs  fold_vs_reduce.rs  kafka.rs  nexmark.rs  recv_vs_select.rs  shuffle.rs  wordcount.rs  wordcount_by_line.rs
examples/: avro_rw.rs  car_accidents.rs  collatz.rs  connected_components.rs  csv_write_read.rs  kafka.rs  kafka_wordcount.rs  kmeans.rs  logistic_regression.rs  nexmark-latency.rs  nexmark.rs  pagerank.rs  pagerank_rich_map.rs  pagerank_stateful.rs  pagerank_timely.rs  parquet_rw.rs  rolling_top_words.rs  rolling_top_words_e2e.rs  simple.rs  transitive_closure.rs  triangles_fold.rs  triangles_rich_map.rs  wordcount.rs  wordcount_assoc.rs  wordcount_lb.rs  wordcount_lb_assoc.rs  wordcount_opt.rs  wordcount_windowed.rs
src/: channel.rs  config.rs  environment.rs  lib.rs  main.rs  runner.rs  scheduler.rs  stream.rs  test.rs  worker.rs
src/block/: batcher.rs  graph_generator.rs  mod.rs  next_strategy.rs  structure.rs
src/network/: demultiplexer.rs  mod.rs  multiplexer.rs  network_channel.rs  receiver.rs  remote.rs  sender.rs  topology.rs
src/network/sync/: demultiplexer.rs  multiplexer.rs  remote.rs
src/network/tokio/: demultiplexer.rs  mod.rs  multiplexer.rs  remote.rs
src/operator/: add_timestamps.rs  aggregators.rs  batch_mode.rs  boxed.rs  broadcast.rs  cache.rs  concat.rs  end.rs  filter.rs  filter_map.rs  flat_map.rs  flatten.rs  fold.rs  group_by.rs  inspect.rs  interval_join.rs  key_by.rs  keyed_fold.rs  keyed_reduce.rs  limit_sorted.rs  map.rs  map_async.rs  map_async_memo.rs  map_memo.rs  max_parallelism.rs  merge.rs  mod.rs  reduce.rs  reorder.rs  replication.rs  rich_filter_map.rs  rich_flat_map.rs  rich_map.rs  rich_map_custom.rs  route.rs  shuffle.rs  split.rs  start.rs  unkey.rs  zip.rs
src/operator/cache/: bincode.rs  mod.rs  stream_cache.rs  vec.rs
src/operator/iteration/: iterate.rs  iterate_delta.rs  iterate_diff.rs  iteration_end.rs  leader.rs  mod.rs  replay.rs  state_handler.rs
src/operator/join/: keyed_join.rs  local_hash.rs  local_sort_merge.rs  mod.rs  ship.rs  start.rs
src/operator/sink/: avro.rs  collect.rs  collect_channel.rs  collect_count.rs  collect_vec.rs  csv.rs  end.rs  for_each.rs  group_by.rs  kafka.rs  mod.rs  parquet.rs  writer.rs
src/operator/source/: async_stream.rs  avro.rs  channel.rs  csv.rs  event_time_iterator.rs  event_time_stream.rs  file.rs  iterator.rs  kafka.rs  mod.rs  parallel_iterator.rs  parquet.rs  start.rs  stream.rs
src/operator/start/: binary.rs  mod.rs  multiple.rs  simple.rs  single.rs  watermark_frontier.rs
src/operator/window/: count_window.rs  event_time_window.rs  first.rs  fold.rs  generic_operator.rs  join.rs  max.rs  min.rs  mod.rs  processing_time.rs  processing_time_window.rs  sum.rs  time_window.rs  window_manager.rs
src/operator/window/aggr/: collect.rs  collect_vec.rs  columnar.rs  count.rs  first.rs  fold.rs  join.rs  last.rs  map.rs  max.rs  min.rs  mod.rs  nth.rs  sum.rs  to_arrow.rs
src/operator/window/aggregator/: first.rs  fold.rs  join.rs  map.rs  max.rs  min.rs  mod.rs  sum.rs
src/operator/window/descr/: all.rs  content_defined.rs  count.rs  event_time.rs  last_k.rs  mod.rs  processing_time.rs  session.rs  transaction.rs
src/operator/window/description/: count_window.rs  event_time_window.rs  mod.rs  processing_time_window.rs  session_window.rs  sliding_window.rs
src/profiler/: backend.rs  bucket_profiler.rs  metrics.rs  mod.rs
src/runner/: ssh2.rs
src/sink/: mod.rs
src/source/: mod.rs  stream.rs
src/worker/: mod.rs
tests/: aggregators.rs  broadcast.rs  concat.rs  filter.rs  filter_map.rs  flatten.rs  fold.rs  fold_scan.rs  group_by.rs  interactive.ipynb  interval_join.rs  join.rs  key_by.rs  keyed_fold.rs  keyed_reduce.rs  map.rs  map_memo.rs  merge.rs  mod.rs  parallel_iterator.rs  reduce.rs  rich_filter_map.rs  rich_flat_map.rs  rich_map.rs  shuffle.rs  split.rs  unkey.rs  utils.rs  zip.rs
tests/iteration/: iterate.rs  mod.rs  replay.rs
tests/window/: aggregator.rs  aggregator_keyed.rs  event_time.rs  join.rs  mod.rs  processing_time.rs
tools/: index.html  plot-profile.ipynb  run_tests.sh
tools/benchmarks/: .gitignore  README.md  aggregate_csv.py  benchmark.py  example.config.yaml  gen_csv.py  make_plot.py
tools/benchmarks/latency/: Cargo.toml
tools/benchmarks/latency/src/: lib.rs  main.rs
tools/benchmarks/plots/: Makefile
tools/datasets/: gen_words.py
tools/visualizer/: index.html
tools/visualizer/css/: style.css
tools/visualizer/js/: data.js  graph.js  network.js  profiler.js  script.js
