[package]
name = "renoir"
description = "Reactive Network of Operators In Rust"
version = "0.6.0"
edition = "2021"
authors = [
    "Luca De Martini <luca.demartini@polimi.it>",
    "Edoardo Morassutto <edoardo.morassutto@gmail.com>",
    "Marco Donadoni <marco.donadoni@mail.polimi.it>"
]
license = "LGPL-3.0-or-later"
repository = "https://github.com/deib-polimi/renoir"
homepage = "https://github.com/deib-polimi/renoir"
readme = "README.md"

[features]
default = ["clap", "ssh", "timestamp"]
timestamp = []
ssh = ["ssh2", "whoami", "shell-escape", "sha2", "base64"]
tokio = ["dep:tokio", "dep:futures", "tokio/net", "tokio/io-util", "tokio/time", "tokio/rt-multi-thread", "tokio/macros"]
avro = ["dep:apache-avro"]
profiler = []
parquet = ["dep:parquet", "dep:arrow"]
rdkafka = ["dep:rdkafka", "tokio"]
# parquet = ["dep:parquet", "dep:arrow"]

[dependencies]
# for logging to the console
log = { version = "0.4.27", features = ["release_max_level_info"] }

# used by the network for storing type-generic structures
typemap_rev = "0.3.0"

# the shuffle() operator requires a random source
nanorand = "0.7.0"

# utility macros for customizing the derive Debug, Default, ...
derivative = "2.2.0"

# serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bincode = { version = "2.0.1", features = ["serde"] }
toml = "0.8.22"

thiserror = "2.0.12"

# handy iterators functions

# for storing non-mutable static variables with non-trivial initialization
once_cell = "1.21.3"

# used for spawning the remote workers
ssh2 = { version = "0.9.5", optional = true }
whoami = { version = "1.6.0", optional = true }
shell-escape = { version = "0.1.5", optional = true }
clap = { version = "4.5.37", features = ["derive"], optional = true }
sha2 = { version = "0.10.9", optional = true }
base64 = { version = "0.22.1", optional = true }

# channel implementation
flume = "0.11.1"

# used for csv file source
csv = "1.3.1"

# Lazy with support for delayed and synchronized initialization
lazy-init = "0.5.1"

# Faster monotonic clock using libc's CLOCK_MONOTONIC_COARSE
coarsetime = "0.1.36"

tokio = { version = "1.44.2", features = ["rt"], default-features = false, optional = true }
smol = { version = "2.0.2", default-features = false}
futures = { version = "0.3.31", optional = true }

parking_lot = "0.12.3"

wyhash = "0.5.0"
fxhash = "0.2.1"
glidesort = "0.1.2"
indexmap = "2.9.0"
tracing = { version = "0.1.41", features = ["log"] }
quick_cache = "0.6.13"
dashmap = "6.1.0"
dyn-clone = "1.0.19" 

apache-avro = { version = "0.17.0", features = ["derive"], optional = true }
parquet = { version = "54.3.1", optional = true }
arrow = { version = "54.3.1", optional = true }
rdkafka = { version = "0.37.0", optional = true }
serde_bytes = "0.11.17"

[dev-dependencies]
# for the tests
env_logger = "0.11.8"
rand = { version = "0.9.1", features = ["small_rng"] }
tempfile = "3.19.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
fake = "4.3.0"
mimalloc = { version = "0.1.46", default-features = false }
tracing-subscriber = "0.3.19"
itertools = "0.14.0"

micrometer = { version = "0.2.7", features = ["enable"]}

# for the examples
regex = "1.11.1"

kstring = { version = "2.0.2", features = ["serde"] }
nexmark = { version = "0.2.0", features = ["serde"] }

[[example]]
name = "nexmark"
required-features = ["timestamp"]

[[example]]
name = "avro_rw"
required-features = ["avro"]

[[example]]
name = "parquet_rw"
required-features = ["parquet"]

[[example]]
name = "rolling_top_words"
required-features = ["timestamp"]

[[example]]
name = "rolling_top_words_e2e"
required-features = ["timestamp"]

[[example]]
name = "kafka"
required-features = ["rdkafka"]

[[example]]
name = "kafka_wordcount"
required-features = ["rdkafka"]

# The list of benchmarks, all of them require "harness = false" in order to
# work with criterion.rs. Cannot set `[lib] harness = false` because the tests
# require the harness.
[[bench]]
name = "collatz"
harness = false
[[bench]]
name = "connected"
harness = false
[[bench]]
name = "wordcount"
harness = false
[[bench]]
name = "shuffle"
harness = false
[[bench]]
name = "fold_vs_reduce"
harness = false
[[bench]]
name = "batch_mode"
harness = false
[[bench]]
name = "nexmark"
harness = false
[[bench]]
name = "caching"
harness = false
[[bench]]
name = "kafka"
harness = false
required-features = ["rdkafka"]


[profile.release]
lto = true

[profile.bench]
inherits = "release"
debug = 1

[profile.release-fast]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"
